Enhance module 1 notebook with improved note formatting and update README to reflect correct module path

--- a/01-tutorials/module-01-foundations/module1.ipynb
+++ b/01-tutorials/module-01-foundations/module1.ipynb
@@ -155,7 +155,10 @@
         "### Option A: GitHub Copilot (Recommended)\n",
         "\n",
         "If you have GitHub Copilot, this is the easiest option:\n",
-        "> **Note:** The GitHub Copilot API repository (`copilot-api`) used in this course is a fork of the original repository from https://cto-github.cisco.com/xinyu3/copilot2api\n",
+        "<div style=\"margin-top:16px; color:#78350f; padding:12px; background:#fef3c7; border-radius:6px; border-left:4px solid #f59e0b;\">\n",
+        "<strong>💡 Note:</strong> <br><br>\n",
+        "The GitHub Copilot API repository (<code style=\"background:#f3f4f6; padding:2px 6px; border-radius:3px; color:#dc2626;\">copilot-api</code>) used in this course is a fork of the original repository from <strong><a href=\"https://cto-github.cisco.com/xinyu3/copilot2api\">https://cto-github.cisco.com/xinyu3/copilot2api</a></strong>.\n",
+        "</div>\n",
         "\n",
         "- Follow the setup steps in [https://github.com/snehangshu-splunk/copilot-api/blob/main/.github/README.md](https://github.com/snehangshu-splunk/copilot-api/blob/main/.github/README.md) to:\n",
         "  - Authenticate (`auth`) with your GitHub account that has Copilot access\n",
@@ -299,7 +302,8 @@
         "- Ensure your environment variables are configured (`CISCO_CLIENT_ID`, `CISCO_CLIENT_SECRET`, `CISCO_OPENAI_APP_KEY`) in the `.env` file.\n",
         "\n",
         "<div style=\"margin-top:16px; color:#000000; padding:12px; background:#dbeafe; border-radius:6px; border-left:4px solid #3b82f6\">\n",
-        "<strong>💡 Remember:</strong> The values for these enviroment variables can be found at <strong><a href=\"https://ai-chat.cisco.com/bridgeit-platform/api/home\">https://ai-chat.cisco.com/bridgeit-platform/api/home</a></strong> by clicking the <strong>View</strong> button found against the <strong>App Key</strong>.\n",
+        "<strong>💡 Remember:</strong><br><br>\n",
+        "The values for these enviroment variables can be found at <strong><a href=\"https://ai-chat.cisco.com/bridgeit-platform/api/home\">https://ai-chat.cisco.com/bridgeit-platform/api/home</a></strong> by clicking the <code style=\"background:#f3f4f6; padding:2px 6px; border-radius:3px; color:#dc2626;\">View</code> button found against the <code style=\"background:#f3f4f6; padding:2px 6px; border-radius:3px; color:#dc2626;\">App Key</code>.\n",
         "</div>\n",
         "\n",
         "If you prefer to use CircuIT APIs, uncomment and run this cell instead:"
@@ -590,7 +594,8 @@
         "</div>\n",
         "\n",
         "<div style=\"margin-top:16px; color:#000000; padding:12px; background:#dbeafe; border-radius:6px; border-left:4px solid #3b82f6\">\n",
-        "<strong>💡 Remember:</strong> The goal is not just to complete activities, but to build lasting skills that transform your development workflow!\n",
+        "<strong>💡 Remember:</strong><br><br>\n",
+        "The goal is not just to complete activities, but to build lasting skills that transform your development workflow!\n",
         "</div>\n"
       ]
     },
