Update module 1 notebook to reference README correctly

--- a/01-tutorials/module-01-foundations/module1.ipynb
+++ b/01-tutorials/module-01-foundations/module1.ipynb
@@ -165,7 +165,7 @@
         "  - Start the local server (default: `http://localhost:7711`)\n",
         "- Then run the \"GitHub Copilot API setup (local proxy)\" cells below.\n",
         "\n",
-        "Quick reference (see README for details):\n",
+        "Quick reference (see `README` for details):\n",
         "1. Download and install dependencies\n",
         "    ```bash\n",
         "    # Clone the repository\n",
