--- a/02-exercises/hands-on/prompt-engineering-exercises.ipynb
+++ b/02-exercises/hands-on/prompt-engineering-exercises.ipynb
@@ -87,12 +87,18 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Activity 1.1: Analyze these prompts and identify missing elements\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Activity 1.2 Task 1: Analyze these prompts and identify missing elements\n",
     "# HINT: For each prompt, decide if it includes:\n",
     "# - Instructions/persona\n",
     "# - Context\n",
@@ -126,12 +132,18 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Activity 1.2: Create a complete prompt with all 4 elements for code documentation\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Activity 1.2 Task 2: Create a complete prompt with all 4 elements for code documentation\n",
     "# HINT: Include all 4 elements:\n",
     "# - Instructions/persona (system)\n",
     "# - Context (user)\n",
