--- a/01-tutorials/module-02-fundamentals/module2.ipynb
+++ b/01-tutorials/module-02-fundamentals/module2.ipynb
@@ -78,7 +78,23 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "❌ Installation failed: Command '['/Users/snekarma/Development/SplunkDev/prompteng-devs/.venv/bin/python', '-m', 'pip', 'install', '-r', './requirements.txt']' returned non-zero exit status 1.\n",
+            "💡 Try running: pip install openai anthropic python-dotenv requests\n"
+          ]
+        },
+        {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "/Users/snekarma/Development/SplunkDev/prompteng-devs/.venv/bin/python: No module named pip\n"
+          ]
+        }
+      ],
       "source": [
         "# Install required packages for Module 2\n",
         "import subprocess\n",
@@ -87,7 +103,7 @@
         "def install_requirements():\n",
         "    try:\n",
         "        # Install from requirements.txt\n",
-        "        subprocess.check_call([sys.executable, \"-m\", \"pip\", \"install\", \"-r\", \"../requirements.txt\"])\n",
+        "        subprocess.check_call([sys.executable, \"-m\", \"pip\", \"install\", \"-r\", \"requirements.txt\"])\n",
         "        print(\"✅ SUCCESS! Module 2 dependencies installed successfully.\")\n",
         "        print(\"📦 Ready for: openai, anthropic, python-dotenv, requests\")\n",
         "    except subprocess.CalledProcessError as e:\n",
@@ -242,7 +258,14 @@
         "role_messages = [\n",
         "    {\n",
         "        \"role\": \"system\",\n",
-        "        \"content\": \"You are a senior code reviewer. Analyze the provided code and give exactly 3 specific feedback points: 1 about code structure, 1 about naming conventions, and 1 about potential improvements. Format each point as a bullet with the category in brackets.\"\n",
+        "        \"content\": \"\"\"You are a senior code reviewer.\n",
+        "\n",
+        "        Analyze the provided code and give exactly 3 specific feedback points: \n",
+        "        1. about code structure\n",
+        "        2. about naming conventions\n",
+        "        3. about potential improvements\n",
+        "        \n",
+        "        Format each point as a bullet with the category in brackets.\"\"\"\n",
         "    },\n",
         "    {\n",
         "        \"role\": \"user\",\n",
@@ -926,8 +949,22 @@
     }
   ],
   "metadata": {
+    "kernelspec": {
+      "display_name": ".venv",
+      "language": "python",
+      "name": "python3"
+    },
     "language_info": {
-      "name": "python"
+      "codemirror_mode": {
+        "name": "ipython",
+        "version": 3
+      },
+      "file_extension": ".py",
+      "mimetype": "text/x-python",
+      "name": "python",
+      "nbconvert_exporter": "python",
+      "pygments_lexer": "ipython3",
+      "version": "3.13.2"
     }
   },
   "nbformat": 4,
