Enhance module 1 notebook with improved instructions for GitHub Copilot API setup, including support for Claude models. Added guidance on handling long outputs and updated connection test feedback for clarity. Adjusted installation command to suppress output for a cleaner user experience.

--- a/01-course/module-01-foundations/module1.ipynb
+++ b/01-course/module-01-foundations/module1.ipynb
@@ -166,6 +166,7 @@
         "<li><strong>Installation commands</strong> run locally and install packages to your Python environment</li>\n",
         "<li><strong>You don't copy/paste</strong> - just click the run button in each cell</li>\n",
         "<li><strong>Output appears</strong> below each cell after you run it</li>\n",
+        "<li><strong>Long outputs are truncated:</strong> If you see \"Output is truncated. View as a scrollable element\" - <strong>click that link</strong> to see the full response in a scrollable view</li>\n",
         "</ul>\n",
         "</div>\n"
       ]
@@ -205,7 +206,7 @@
         "def install_requirements():\n",
         "    try:\n",
         "        # Install from requirements.txt\n",
-        "        subprocess.check_call([sys.executable, \"-m\", \"pip\", \"install\", \"-r\", \"requirements.txt\"])\n",
+        "        subprocess.check_call([sys.executable, \"-m\", \"pip\", \"install\", \"-q\", \"-r\", \"requirements.txt\"])\n",
         "        print(\"✅ SUCCESS! All dependencies installed successfully.\")\n",
         "        print(\"📦 Installed: openai, anthropic, python-dotenv, requests\")\n",
         "    except subprocess.CalledProcessError as e:\n",
@@ -235,7 +236,14 @@
         "\n",
         "Choose your preferred option:\n",
         "\n",
-        "- **Option A: GitHub Copilot API (local proxy)**: Recommended if you don't have OpenAI or CircuIT API access. Follow [GitHub-Copilot-2-API/README.md](../../GitHub-Copilot-2-API/README.md) to authenticate and start the local server, then run the `GitHub Copilot (local proxy)` setup cells below.\n",
+        "- **Option A: GitHub Copilot API (local proxy)**: Recommended if you don't have OpenAI or CircuIT API access.\n",
+        "  - Supports both **Claude** and **OpenAI** models\n",
+        "  - No API keys needed - uses your GitHub Copilot subscription\n",
+        "  - Follow [GitHub-Copilot-2-API/README.md](../../GitHub-Copilot-2-API/README.md) to authenticate and start the local server\n",
+        "  - Run the setup cell below and **edit your preferred provider** (`\"openai\"` or `\"claude\"`) by setting the `PROVIDER` variable\n",
+        "  - Available models:\n",
+        "    - **OpenAI**: gpt-4o, gpt-4, gpt-3.5-turbo, o3-mini, o4-mini\n",
+        "    - **Claude**: claude-3.5-sonnet, claude-3.7-sonnet, claude-sonnet-4\n",
         "\n",
         "- **Option B: OpenAI API**: If you have OpenAI API access, you can use the `OpenAI` connection cells provided later in this notebook.\n",
         "\n",
@@ -305,44 +313,166 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 2,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "🔄 Testing connection to GitHub Copilot proxy...\n",
+            "\n",
+            "============================================================\n",
+            "✅ CONNECTION SUCCESSFUL!\n",
+            "============================================================\n",
+            "🤖 Provider: CLAUDE\n",
+            "📦 Default Model: claude-3.5-sonnet\n",
+            "🔗 Endpoint: http://localhost:7711\n",
+            "\n",
+            "💡 To switch providers, change PROVIDER to 'openai' and rerun this cell\n",
+            "======================================================================\n"
+          ]
+        }
+      ],
       "source": [
-        "# GitHub Copilot API setup (local proxy)\n",
+        "# Option A: GitHub Copilot API setup (Recommended)\n",
         "import openai\n",
+        "import anthropic\n",
         "import os\n",
         "\n",
-        "# Configure for local GitHub Copilot proxy\n",
-        "client = openai.OpenAI(\n",
+        "# ============================================\n",
+        "# 🎯 CHOOSE YOUR AI MODEL PROVIDER\n",
+        "# ============================================\n",
+        "# Set your preference: \"openai\" or \"claude\"\n",
+        "PROVIDER = \"claude\"  # Change to \"claude\" to use Claude models\n",
+        "\n",
+        "# ============================================\n",
+        "# 📋 Available Models by Provider\n",
+        "# ============================================\n",
+        "# OpenAI Models (via GitHub Copilot):\n",
+        "#   - gpt-4o (recommended, supports vision)\n",
+        "#   - gpt-4\n",
+        "#   - gpt-3.5-turbo\n",
+        "#   - o3-mini, o4-mini\n",
+        "#\n",
+        "# Claude Models (via GitHub Copilot):\n",
+        "#   - claude-3.5-sonnet (recommended, supports vision)\n",
+        "#   - claude-3.7-sonnet (supports vision)\n",
+        "#   - claude-sonnet-4 (supports vision)\n",
+        "# ============================================\n",
+        "\n",
+        "# Configure clients for both providers\n",
+        "openai_client = openai.OpenAI(\n",
         "    base_url=\"http://localhost:7711/v1\",\n",
-        "    api_key=\"dummy-key\"  # The local proxy doesn't need a real key\n",
+        "    api_key=\"dummy-key\"\n",
         ")\n",
         "\n",
-        "def get_chat_completion(messages, model=\"gpt-4\", temperature=0.7):\n",
-        "    \"\"\"\n",
-        "    Get a chat completion from the AI model.\n",
-        "    \n",
-        "    Args:\n",
-        "        messages: List of message dictionaries with 'role' and 'content'\n",
-        "        model: Model name (default: gpt-4)\n",
-        "        temperature: Creativity level 0-1 (default: 0.7)\n",
-        "    \n",
-        "    Returns:\n",
-        "        String response from the AI model\n",
-        "    \"\"\"\n",
+        "claude_client = anthropic.Anthropic(\n",
+        "    api_key=\"dummy-key\",\n",
+        "    base_url=\"http://localhost:7711\"\n",
+        ")\n",
+        "\n",
+        "# Set default models for each provider\n",
+        "OPENAI_DEFAULT_MODEL = \"gpt-4o\"\n",
+        "CLAUDE_DEFAULT_MODEL = \"claude-3.5-sonnet\"\n",
+        "\n",
+        "\n",
+        "def _extract_text_from_blocks(blocks):\n",
+        "    \"\"\"Extract text content from response blocks returned by the API.\"\"\"\n",
+        "    parts = []\n",
+        "    for block in blocks:\n",
+        "        text_val = getattr(block, \"text\", None)\n",
+        "        if isinstance(text_val, str):\n",
+        "            parts.append(text_val)\n",
+        "        elif isinstance(block, dict):\n",
+        "            t = block.get(\"text\")\n",
+        "            if isinstance(t, str):\n",
+        "                parts.append(t)\n",
+        "    return \"\\n\".join(parts)\n",
+        "\n",
+        "\n",
+        "def get_openai_completion(messages, model=None, temperature=0.0):\n",
+        "    \"\"\"Get completion from OpenAI models via GitHub Copilot.\"\"\"\n",
+        "    if model is None:\n",
+        "        model = OPENAI_DEFAULT_MODEL\n",
         "    try:\n",
-        "        response = client.chat.completions.create(\n",
+        "        response = openai_client.chat.completions.create(\n",
         "            model=model,\n",
         "            messages=messages,\n",
         "            temperature=temperature\n",
         "        )\n",
         "        return response.choices[0].message.content\n",
         "    except Exception as e:\n",
-        "        return f\"❌ Error: {e}\\\\n\\\\n💡 Make sure the GitHub Copilot local proxy is running on port 7711\"\n",
+        "        return f\"❌ Error: {e}\\n💡 Make sure GitHub Copilot proxy is running on port 7711\"\n",
         "\n",
-        "print(\"✅ GitHub Copilot API configured successfully!\")\n",
-        "print(\"🔗 Connected to: http://localhost:7711\")\n"
+        "\n",
+        "def get_claude_completion(messages, model=None, temperature=0.0):\n",
+        "    \"\"\"Get completion from Claude models via GitHub Copilot.\"\"\"\n",
+        "    if model is None:\n",
+        "        model = CLAUDE_DEFAULT_MODEL\n",
+        "    try:\n",
+        "        response = claude_client.messages.create(\n",
+        "            model=model,\n",
+        "            max_tokens=8192,\n",
+        "            messages=messages,\n",
+        "            temperature=temperature\n",
+        "        )\n",
+        "        return _extract_text_from_blocks(getattr(response, \"content\", []))\n",
+        "    except Exception as e:\n",
+        "        return f\"❌ Error: {e}\\n💡 Make sure GitHub Copilot proxy is running on port 7711\"\n",
+        "\n",
+        "\n",
+        "def get_chat_completion(messages, model=None, temperature=0.7):\n",
+        "    \"\"\"\n",
+        "    Generic function to get chat completion from any provider.\n",
+        "    Routes to the appropriate provider-specific function based on PROVIDER setting.\n",
+        "    \"\"\"\n",
+        "    if PROVIDER.lower() == \"claude\":\n",
+        "        return get_claude_completion(messages, model, temperature)\n",
+        "    else:  # Default to OpenAI\n",
+        "        return get_openai_completion(messages, model, temperature)\n",
+        "\n",
+        "\n",
+        "def get_default_model():\n",
+        "    \"\"\"Get the default model for the current provider.\"\"\"\n",
+        "    if PROVIDER.lower() == \"claude\":\n",
+        "        return CLAUDE_DEFAULT_MODEL\n",
+        "    else:\n",
+        "        return OPENAI_DEFAULT_MODEL\n",
+        "\n",
+        "\n",
+        "# ============================================\n",
+        "# 🧪 TEST CONNECTION\n",
+        "# ============================================\n",
+        "print(\"🔄 Testing connection to GitHub Copilot proxy...\")\n",
+        "test_result = get_chat_completion([\n",
+        "    {\"role\": \"user\", \"content\": \"test\"}\n",
+        "])\n",
+        "\n",
+        "if test_result and \"Error\" in test_result:\n",
+        "    print(\"\\n\" + \"=\"*60)\n",
+        "    print(\"❌ CONNECTION FAILED!\")\n",
+        "    print(\"=\"*60)\n",
+        "    print(f\"Provider: {PROVIDER.upper()}\")\n",
+        "    print(f\"Expected endpoint: http://localhost:7711\")\n",
+        "    print(\"\\n⚠️  The GitHub Copilot proxy is NOT running!\")\n",
+        "    print(\"\\n📋 To fix this:\")\n",
+        "    print(\"   1. Open a new terminal\")\n",
+        "    print(\"   2. Navigate to your copilot-api directory\")\n",
+        "    print(\"   3. Run: uv run copilot2api start\")\n",
+        "    print(\"   4. Wait for the server to start (you should see 'Server initialized')\")\n",
+        "    print(\"   5. Come back and rerun this cell\")\n",
+        "    print(\"\\n💡 Need setup help? See: GitHub-Copilot-2-API/README.md\")\n",
+        "    print(\"=\"*60)\n",
+        "else:\n",
+        "    print(\"\\n\" + \"=\"*60)\n",
+        "    print(\"✅ CONNECTION SUCCESSFUL!\")\n",
+        "    print(\"=\"*60)\n",
+        "    print(f\"🤖 Provider: {PROVIDER.upper()}\")\n",
+        "    print(f\"📦 Default Model: {get_default_model()}\")\n",
+        "    print(f\"🔗 Endpoint: http://localhost:7711\")\n",
+        "    print(f\"\\n💡 To switch providers, change PROVIDER to '{'claude' if PROVIDER.lower() == 'openai' else 'openai'}' and rerun this cell\")\n",
+        "    print(\"=\"*70)\n"
       ]
     },
     {
@@ -471,7 +601,17 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "🧪 Test Response:\n",
+            "Connection successful! Ready for prompt engineering.\n",
+            "\\n🎉 Perfect! Your AI connection is working!\n"
+          ]
+        }
+      ],
       "source": [
         "# Test the connection with a simple prompt\n",
         "test_messages = [\n",
@@ -490,9 +630,9 @@
         "print(response)\n",
         "\n",
         "if response and \"Connection successful\" in response:\n",
-        "    print(\"\\\\n🎉 Perfect! Your AI connection is working!\")\n",
+        "    print(\"\\n🎉 Perfect! Your AI connection is working!\")\n",
         "else:\n",
-        "    print(\"\\\\n⚠️  Connection test complete, but response format may vary.\")\n",
+        "    print(\"\\n⚠️  Connection test complete, but response format may vary.\")\n",
         "    print(\"This is normal - let's continue with the tutorial!\")\n"
       ]
     },
